[gd_scene load_steps=3 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://sprites/hud/hud_bg.png" type="Texture" id=2]

[node name="HUD" type="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 20.0
margin_bottom = 20.0
script = ExtResource( 1 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
modulate = Color( 1, 1, 1, 0.282353 )
margin_right = 222.0
margin_bottom = 50.0
texture = ExtResource( 2 )
region_rect = Rect2( 178, 2, 54, 57 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 222.0
margin_bottom = 50.0

[node name="LivesBar" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 222.0
margin_bottom = 14.0

[node name="livesLabel" type="Label" parent="VBoxContainer/LivesBar"]
margin_right = 37.0
margin_bottom = 14.0
text = "Lives:"

[node name="livesCount" type="Label" parent="VBoxContainer/LivesBar"]
margin_left = 41.0
margin_right = 41.0
margin_bottom = 14.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 222.0
margin_bottom = 32.0

[node name="scoreLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 43.0
margin_bottom = 14.0
text = "Score: "

[node name="scoreCount" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 47.0
margin_right = 55.0
margin_bottom = 14.0
text = "0"

[node name="MissionStatus" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 222.0
margin_bottom = 50.0

[node name="MissionStatusLabel" type="Label" parent="VBoxContainer/MissionStatus"]
margin_right = 222.0
margin_bottom = 14.0
text = "Mission Complete! Return to Base!"
